--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -64,7 +64,7 @@
 
                 <!-- TO DO: MAKE THE PHONE NUMBER AND EMAIL ADDRESS BELOW INTO PROPERLY FORMATTED LINKS INSIDE OF THE ADDRESS TAG -->
                 <address>
-                    <a href="tel:(555) 555-5555">(555) 555-5555<br></a>
+                    <a href="tel:(555)555-5555">(555) 555-5555<br></a>
                     <a href="mailto:j.barnett@asu.edu">Email Jessica Barnett<br></a>
                 </address>
                 <!-- TO DO: COMPLETE THE LINK BELOW SO THAT IT WILL TAKE THE USER TO THE CONTACT SECTION ON THE CONTACT PAGE WHEN CLICKED -->
