--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Navigation and Links</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -109,7 +109,7 @@
 
                 <!-- TO DO: MAKE THE PHONE NUMBER AND EMAIL ADDRESS BELOW INTO PROPERLY FORMATTED LINKS INSIDE OF THE ADDRESS TAG -->
                 <address>
-                    <a href="tel:(555) 555-5555">(555) 555-5555<br></a>
+                    <a href="tel:(555)555-5555">(555) 555-5555<br></a>
                     <a href="mailto:j.barnett@asu.edu">Email Jessica Barnett<br></a>
                 </address>
                 <!-- TO DO: COMPLETE THE LINK BELOW SO THAT IT WILL TAKE THE USER TO THE CONTACT SECTION ON THE CONTACT PAGE WHEN CLICKED -->
